Thu Feb 10 16:42:18 UTC 2011  Don Hudson  <hudsond@ociweb.com>

        * dds/DCPS/transport/multicast/MulticastDataLink.cpp:

          Set send buffer to ACE_DEFAULT_MAX_SOCKET_BUFSIZ if it's defined
          (receive buffer is already configurable).

        * dds/DCPS/transport/udp/UdpDataLink.cpp:

          Set send and receive buffers to ACE_DEFAULT_MAX_SOCKET_BUFSIZ
          if it's defined.

Thu Feb 10 15:58:54 UTC 2011  Don Hudson  <hudsond@ociweb.com>

        * dds/DCPS/transport/framework/TransportConfiguration.h:
        * dds/DCPS/transport/framework/TransportConfiguration.cpp:
        * dds/DCPS/transport/framework/TransportImpl.h:
        * dds/DCPS/transport/multicast/MulticastConfiguration.cpp:
        * dds/DCPS/transport/simpleTCP/SimpleTcpTransport.cpp:
        * dds/DCPS/transport/udp/UdpConfiguration.cpp:

          Removed trailing white space.

Wed Feb  9 23:48:56 UTC 2011  Adam Mitz  <mitza@ociweb.com>

        * dds/DCPS/transport/framework/TransportConfiguration.cpp:
        * dds/DCPS/transport/framework/TransportImpl.cpp:

          Fixed further WCHAR problems.

Wed Feb  9 22:24:04 UTC 2011  Don Hudson  <hudsond@ociweb.com>

        * dds/DCPS/transport/framework/TransportConfiguration.cpp:
        * dds/DCPS/transport/multicast/MulticastConfiguration.cpp:
        * dds/DCPS/transport/simpleTCP/SimpleTcpConfiguration.cpp:
        * dds/DCPS/transport/udp/UdpConfiguration.cpp:
        * performance-tests/DCPS/dummyTCP/DummyTcpConfiguration.cpp:

          Wrapped name parameter in ACE_TEXT when calling formatNameForDump().

        * dds/DCPS/transport/framework/TransportImpl.cpp:

          Removed part of debug message that shouldn't have been committed.

Wed Feb  9 14:53:48 UTC 2011  Don Hudson  <hudsond@ociweb.com>

        * dds/DCPS/transport/framework/TransportConfiguration.h:
        * dds/DCPS/transport/framework/TransportConfiguration.cpp:

          Changed formatNameForDump() method to take a ACE_TString.
